[gd_scene load_steps=3 format=3 uid="uid://dfgbthahpnxjb"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_jkt2s"]
[ext_resource type="FontFile" uid="uid://be8hbwrmnpdjp" path="res://TEMP_assets/fonts/PixelOperator8.ttf" id="2_yoj5j"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_jkt2s")

[node name="coinCounter" type="Label" parent="."]
anchors_preset = -1
anchor_right = 0.175
anchor_bottom = 0.06
offset_left = 6.0
offset_top = 7.0
offset_right = 0.399994
offset_bottom = 0.119999
theme_override_colors/font_shadow_color = Color(0.103744, 0.103744, 0.103744, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_yoj5j")
theme_override_font_sizes/font_size = 32
text = "Coins: x"

[node name="HealthCounter" type="Label" parent="."]
anchors_preset = -1
anchor_right = 0.175
anchor_bottom = 0.06
offset_left = 904.0
offset_top = 12.0
offset_right = 922.4
offset_bottom = 5.12
theme_override_colors/font_shadow_color = Color(0.103744, 0.103744, 0.103744, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_yoj5j")
theme_override_font_sizes/font_size = 32
text = "Health: x"

[node name="SubtractOneHealth" type="Label" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.452
anchor_right = 0.569
anchor_bottom = 1.0
offset_left = 65.296
offset_top = 283.0
offset_right = 11.512
offset_bottom = -333.0
rotation = 0.316994
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.103744, 0.103744, 0.103744, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_yoj5j")
theme_override_font_sizes/font_size = 32
text = "- 1"

[node name="AddOneHealth" type="Label" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.452
anchor_right = 0.569
anchor_bottom = 1.0
offset_left = 65.296
offset_top = 283.0
offset_right = 11.512
offset_bottom = -333.0
rotation = 0.316994
theme_override_colors/font_color = Color(9.62615e-07, 0.999613, 0.0729913, 1)
theme_override_colors/font_shadow_color = Color(0.103744, 0.103744, 0.103744, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_yoj5j")
theme_override_font_sizes/font_size = 32
text = "+ 1"

[node name="AddOneCoin" type="Label" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.452
anchor_right = 0.642
anchor_bottom = 1.0
offset_left = -11.704
offset_top = 316.0
offset_right = -65.488
offset_bottom = -300.0
rotation = -0.342341
theme_override_colors/font_color = Color(0.946792, 0.828323, 0, 1)
theme_override_colors/font_shadow_color = Color(0.103744, 0.103744, 0.103744, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_yoj5j")
theme_override_font_sizes/font_size = 32
text = "+ 1"

[node name="SubtractFiveHealth" type="Label" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.452
anchor_right = 0.569
anchor_bottom = 1.0
offset_left = 65.296
offset_top = 283.0
offset_right = 11.512
offset_bottom = -333.0
rotation = 0.316994
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.103744, 0.103744, 0.103744, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_yoj5j")
theme_override_font_sizes/font_size = 32
text = "- 5"

[node name="showSubtraction" type="Timer" parent="."]

[node name="showAddition" type="Timer" parent="."]

[node name="showCoinAddition" type="Timer" parent="."]

[connection signal="timeout" from="showSubtraction" to="." method="_on_show_subtraction_timeout"]
[connection signal="timeout" from="showAddition" to="." method="_on_show_addition_timeout"]
[connection signal="timeout" from="showCoinAddition" to="." method="_on_show_coin_addition_timeout"]
